syntax = "proto3";
package traveller;
import "google/protobuf/empty.proto";
option go_package="./;pb";

message GetTotalUserResponse{
    int64 total_user=1;
}

message GetTotalSolvedThreadResponse{
    int64 total_solved_thread=1;
}

message GetTotalTravelerResponse{
    int64 total_travler=1;
}

message GetUserStatisticRequest{
    int64 user_id=1;
}

message GetUserStatisticResponse{
    int64 thread_created=1;
    int64 thread_cracked=2;
}


service StatisticService{
    rpc GetTotalUser(google.protobuf.Empty) returns (GetTotalUserResponse){}
    rpc GetTotalSolvedThread(google.protobuf.Empty) returns (GetTotalSolvedThreadResponse){}
    rpc GetTotalTraveler(google.protobuf.Empty) returns (GetTotalTravelerResponse){}
    rpc GetUserStatistic(GetUserStatisticRequest) returns (GetUserStatisticResponse){}
}